--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,13 @@ android {
     }
 }
 
-
 ext {
     androidSupportVersion = "26.1.0"
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -47,3 +47,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
+
+apply plugin: 'com.google.gms.google-services'
